--- a/css/style.css
+++ b/css/style.css
@@ -623,16 +623,6 @@ video {
   margin-right: 0.75rem;
 }
 
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
-.mx-5 {
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -659,6 +649,10 @@ video {
 
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
 }
 
 .mb-3 {
@@ -709,6 +703,10 @@ video {
   margin-right: 1.25rem;
 }
 
+.mr-8 {
+  margin-right: 2rem;
+}
+
 .mt-12 {
   margin-top: 3rem;
 }
@@ -741,8 +739,16 @@ video {
   margin-top: 2rem;
 }
 
+.mb-32 {
+  margin-bottom: 8rem;
+}
+
 .flex {
   display: flex;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-10 {
@@ -793,10 +799,6 @@ video {
   height: 20%;
 }
 
-.h-\[250rem\] {
-  height: 250rem;
-}
-
 .h-\[25rem\] {
   height: 25rem;
 }
@@ -830,24 +832,20 @@ video {
   height: min-content;
 }
 
-.h-8 {
-  height: 2rem;
+.h-\[30rem\] {
+  height: 30rem;
 }
 
-.h-56 {
-  height: 14rem;
+.h-\[40rem\] {
+  height: 40rem;
 }
 
-.h-44 {
-  height: 11rem;
+.h-\[35rem\] {
+  height: 35rem;
 }
 
-.h-64 {
-  height: 16rem;
-}
-
-.h-72 {
-  height: 18rem;
+.max-h-96 {
+  max-height: 24rem;
 }
 
 .w-119 {
@@ -876,6 +874,10 @@ video {
 
 .w-8 {
   width: 2rem;
+}
+
+.w-\[10rem\] {
+  width: 10rem;
 }
 
 .w-\[14rem\] {
@@ -934,10 +936,6 @@ video {
   width: 100%;
 }
 
-.w-24 {
-  width: 6rem;
-}
-
 .min-w-min {
   min-width: -moz-min-content;
   min-width: min-content;
@@ -953,6 +951,10 @@ video {
 
 .max-w-md {
   max-width: 28rem;
+}
+
+.max-w-sm {
+  max-width: 24rem;
 }
 
 .grow {
@@ -1076,10 +1078,6 @@ video {
 
 .flex-nowrap {
   flex-wrap: nowrap;
-}
-
-.items-start {
-  align-items: flex-start;
 }
 
 .items-end {
@@ -1280,8 +1278,9 @@ video {
   padding: 2rem;
 }
 
-.p-2 {
-  padding: 0.5rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-3 {
@@ -1304,9 +1303,9 @@ video {
   padding-right: 1.5rem;
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
 }
 
 .py-1 {
@@ -1566,6 +1565,14 @@ video {
     margin-bottom: 5rem;
   }
 
+  .ipad\:flex {
+    display: flex;
+  }
+
+  .ipad\:hidden {
+    display: none;
+  }
+
   .ipad\:max-w-xl {
     max-width: 36rem;
   }
@@ -1612,6 +1619,18 @@ video {
 }
 
 @media (min-width: 1028px) {
+  .laptop\:absolute {
+    position: absolute;
+  }
+
+  .laptop\:bottom-0 {
+    bottom: 0px;
+  }
+
+  .laptop\:right-0 {
+    right: 0px;
+  }
+
   .laptop\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
@@ -1632,8 +1651,32 @@ video {
     margin-bottom: 0px;
   }
 
+  .laptop\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .laptop\:ml-16 {
     margin-left: 4rem;
+  }
+
+  .laptop\:ml-20 {
+    margin-left: 5rem;
+  }
+
+  .laptop\:ml-4 {
+    margin-left: 1rem;
+  }
+
+  .laptop\:ml-5 {
+    margin-left: 1.25rem;
+  }
+
+  .laptop\:mr-0 {
+    margin-right: 0px;
+  }
+
+  .laptop\:mr-4 {
+    margin-right: 1rem;
   }
 
   .laptop\:mt-0 {
@@ -1644,10 +1687,6 @@ video {
     margin-top: 2.75rem;
   }
 
-  .laptop\:mr-0 {
-    margin-right: 0px;
-  }
-
   .laptop\:mt-5 {
     margin-top: 1.25rem;
   }
@@ -1656,12 +1695,12 @@ video {
     display: flex;
   }
 
-  .laptop\:h-auto {
-    height: auto;
-  }
-
   .laptop\:h-72 {
     height: 18rem;
+  }
+
+  .laptop\:h-auto {
+    height: auto;
   }
 
   .laptop\:w-1\/2 {
@@ -1672,6 +1711,10 @@ video {
     width: 20rem;
   }
 
+  .laptop\:w-\[15rem\] {
+    width: 15rem;
+  }
+
   .laptop\:w-\[1px\] {
     width: 1px;
   }
@@ -1680,24 +1723,34 @@ video {
     width: auto;
   }
 
-  .laptop\:w-64 {
-    width: 16rem;
-  }
-
-  .laptop\:w-72 {
-    width: 18rem;
-  }
-
-  .laptop\:w-96 {
-    width: 24rem;
-  }
-
   .laptop\:w-full {
     width: 100%;
   }
 
+  .laptop\:min-w-min {
+    min-width: -moz-min-content;
+    min-width: min-content;
+  }
+
+  .laptop\:max-w-5xl {
+    max-width: 64rem;
+  }
+
+  .laptop\:max-w-full {
+    max-width: 100%;
+  }
+
+  .laptop\:max-w-none {
+    max-width: none;
+  }
+
   .laptop\:translate-x-24 {
     --tw-translate-x: 6rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .laptop\:translate-y-0 {
+    --tw-translate-y: 0px;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
@@ -1744,14 +1797,50 @@ video {
     justify-content: space-between;
   }
 
+  .laptop\:rounded-full {
+    border-radius: 9999px;
+  }
+
+  .laptop\:rounded-xl {
+    border-radius: 0.75rem;
+  }
+
+  .laptop\:p-20 {
+    padding: 5rem;
+  }
+
   .laptop\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
   }
 
+  .laptop\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .laptop\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
   .laptop\:py-10 {
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
+  }
+
+  .laptop\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .laptop\:py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .laptop\:pt-0 {
+    padding-top: 0px;
   }
 
   .laptop\:text-center {
@@ -1778,32 +1867,52 @@ video {
 }
 
 @media (min-width: 1366px) {
-  .desktop\:ml-24 {
-    margin-left: 6rem;
+  .desktop\:mb-0 {
+    margin-bottom: 0px;
   }
 
-  .desktop\:mr-24 {
-    margin-right: 6rem;
+  .desktop\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .desktop\:ml-0 {
+    margin-left: 0px;
   }
 
   .desktop\:ml-20 {
     margin-left: 5rem;
   }
 
-  .desktop\:ml-16 {
-    margin-left: 4rem;
+  .desktop\:mr-24 {
+    margin-right: 6rem;
   }
 
-  .desktop\:ml-14 {
-    margin-left: 3.5rem;
+  .desktop\:mt-0 {
+    margin-top: 0px;
   }
 
-  .desktop\:ml-12 {
-    margin-left: 3rem;
+  .desktop\:flex {
+    display: flex;
+  }
+
+  .desktop\:h-full {
+    height: 100%;
+  }
+
+  .desktop\:w-1\/2 {
+    width: 50%;
+  }
+
+  .desktop\:w-\[18rem\] {
+    width: 18rem;
   }
 
   .desktop\:w-full {
     width: 100%;
+  }
+
+  .desktop\:min-w-full {
+    min-width: 100%;
   }
 
   .desktop\:translate-y-20 {
@@ -1821,12 +1930,59 @@ video {
     flex-direction: row;
   }
 
+  .desktop\:flex-col {
+    flex-direction: column;
+  }
+
+  .desktop\:flex-wrap {
+    flex-wrap: wrap;
+  }
+
   .desktop\:items-start {
     align-items: flex-start;
   }
 
   .desktop\:justify-end {
     justify-content: flex-end;
+  }
+
+  .desktop\:p-0 {
+    padding: 0px;
+  }
+
+  .desktop\:p-10 {
+    padding: 2.5rem;
+  }
+
+  .desktop\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .desktop\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .desktop\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .desktop\:pb-2 {
+    padding-bottom: 0.5rem;
+  }
+
+  .desktop\:pl-2 {
+    padding-left: 0.5rem;
+  }
+
+  .desktop\:pr-2 {
+    padding-right: 0.5rem;
+  }
+
+  .desktop\:pt-2 {
+    padding-top: 0.5rem;
   }
 
   .desktop\:text-start {
@@ -1843,7 +1999,18 @@ video {
     line-height: 1.5rem;
   }
 
+  .desktop\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
   .desktop\:leading-snug {
     line-height: 1.375;
+  }
+}
+
+@media (min-width: 1920px) {
+  .desktbig\:w-\[25rem\] {
+    width: 25rem;
   }
 }
